--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,6 @@ soupsieve==2.0
 SQLAlchemy==1.3.16
 tzlocal==2.0.0
 urllib3==1.25.9
-waitress==1.4.3
 Werkzeug==1.0.1
+gunicorn==19.4.5
 zope.interface==5.1.0
